# investigation-tango

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  EstrategiaAlgoritmica.h  Main.cpp  Numero.h  VectorNumero.h
src/Iterator/: Curso.cpp  Curso.h  CursoManager.cpp  CursoManager.h  Iterador.h  IteradorLista.h  Lista.h  Nodo.h
tst/: CMakeLists.txt  Main.cpp
